samples/iptables-exposed-services.txt
# Generated by iptables-save v1.8.9 on Tue May 26 09:00:00 2026
# A host that leaks a pile of data/admin services straight to the internet:
# a Docker API with no TLS, Elasticsearch and memcached (both authless by
# default), SMB, and MSSQL. Each ACCEPT from 0.0.0.0/0 should raise
# exposed-admin-port. This is the "how boxes get owned" sample.
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2375 -m comment --comment "docker api (NO TLS!)" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9200 -m comment --comment "elasticsearch" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 11211 -m comment --comment "memcached" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 445 -m comment --comment "smb" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1433 -m comment --comment "mssql" -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 5900 -m comment --comment "vnc from mgmt only (ok)" -j ACCEPT
-A INPUT -j DROP
COMMIT
